--- a/templates/index.html
+++ b/templates/index.html
@@ -1,117 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>E-Hospital</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Diabetes Prediction</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
         }
-        .navbar {
-            overflow: hidden;
-            background-color: #333;
-        }
-        .navbar a {
-            float: left;
-            font-size: 16px;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-        .dropdown {
-            float: left;
-            overflow: hidden;
-        }
-        .dropdown .dropbtn {
-            font-size: 16px;
-            border: none;
-            outline: none;
-            color: white;
-            padding: 14px 16px;
-            background-color: inherit;
-            font-family: inherit;
-            margin: 0;
-        }
-        .navbar a:hover, .dropdown:hover .dropbtn {
-            background-color: red;
-        }
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            z-index: 1;
-        }
-        .dropdown-content a {
-            float: none;
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            text-align: left;
-        }
-        .dropdown-content a:hover {
-            background-color: #ddd;
-        }
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-        input[type=text], select {
-            width: 100%;
-            padding: 12px 20px;
-            margin: 8px 0;
-            display: inline-block;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-        .registerbtn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 16px 20px;
-            margin: 8px 0;
-            border: none;
-            cursor: pointer;
-            width: 100%;
-            opacity: 0.9;
-        }
-        .registerbtn:hover {
-            opacity: 1;
-        }
-        input[type=submit]:hover {
-            background-color: #45a049;
-        }
     </style>
 </head>
 <body>
-<div class="navbar">
-    <a href="/">Nerchuko</a>
-    <a href="https://github.com/nandu19k">Github</a>
-    <a href="https://www.instagram.com/nerchu_ko/">Instagram</a>
-    <div class="dropdown">
-        <button class="dropbtn">
-            Other Projects
-            <i class="fa fa-caret-down"></i>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand mx-auto" href="/">Prediction</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="dropdown-content">
-            <a href="https://sms-spam-ml.herokuapp.com/">SMS Spam Detector</a>
-        </div>
     </div>
+</nav>
+
+<div class="container mt-5">
+    <h2 class="text-center mb-4 py-5">Diabetes Prediction System</h2>
+    <form action="/predict" method="post">
+        <div class="row mb-3 pt-2">
+            <div class="col">
+                <input type="text" class="form-control" name="Pregnancies" placeholder="Pregnancies" required>
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" name="Glucose Level" placeholder="Glucose Level" required>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col">
+                <input type="text" class="form-control" name="Blood Pressure" placeholder="Blood Pressure" required>
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" name="Skin Thickness" placeholder="Skin Thickness" required>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col">
+                <input type="text" class="form-control" name="Insulin" placeholder="Insulin" required>
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" name="BMI" placeholder="BMI" required>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col">
+                <input type="text" class="form-control" name="Diabetes PF" placeholder="Diabetes PF" required>
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" name="Age" placeholder="Age" required>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary w-100">Predict</button>
+    </form>
 </div>
-<h2><a href='/'> <p style="text-align: center;">Diabetes Prediction</p></a></h2>
-<form action="/predict" method="post">
-    <input type="text" name="Pregnancies" placeholder="Pregnancies" required="required" />
-    <input type="text" name="Glucose Level" placeholder="Glucose Level" required="required" />
-    <input type="text" name="Blood Pressure" placeholder="Blood Pressure" required="required" />
-    <input type="text" name="Skin Thickness" placeholder="Skin Thickness" required="required" />
-    <input type="text" name="Insulin" placeholder="Insulin" required="required" />
-    <input type="text" name="BMI" placeholder="BMI" required="required" />
-    <input type="text" name="Diabetes PF" placeholder="Diabetes PF" required="required" />
-    <input type="text" name="Age" placeholder="Age" required="required" />
-    <button type="submit" class="registerbtn">Predict</button>
-</form>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
