--- a/templates/result.html
+++ b/templates/result.html
@@ -1,117 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>E-Hospital</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Diabetes Prediction</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        .navbar {
-            overflow: hidden;
-            background-color: #333;
-        }
-        .navbar a {
-            float: left;
-            font-size: 16px;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-        .dropdown {
-            float: left;
-            overflow: hidden;
-        }
-        .dropdown .dropbtn {
-            font-size: 16px;
-            border: none;
-            outline: none;
-            color: white;
-            padding: 14px 16px;
-            background-color: inherit;
-            font-family: inherit;
-            margin: 0;
-        }
-        .navbar a:hover, .dropdown:hover .dropbtn {
-            background-color: red;
-        }
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            z-index: 1;
-        }
-        .dropdown-content a {
-            float: none;
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display:block;
-            text-align:left;
-        }
-        .dropdown-content a:hover{
-            background-color:#ddd;
-        }
-
-        .dropdown:hover .dropdown-content{
-            display:block;
-        }
-
-        input[type=text], select {
-            width: 100%;
-            padding: 12px 20px;
-            margin: 8px 0;
-            display: inline-block;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-        .registerbtn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 16px 20px;
-            margin: 8px 0;
-            border: none;
-            cursor: pointer;
-            width: 100%;
-            opacity: 0.9;
-        }
-        .registerbtn:hover {
-            opacity: 1;
-        }
-        input[type=submit]:hover {
-            background-color: #45a049;
-        }
-    </style>
 </head>
 <body>
-<div class="navbar">
-    <a href="/">Nerchuko</a>
-    <a href="https://github.com/nandu19k">Github</a>
-    <a href="https://www.instagram.com/nerchu_ko/">Instagram</a>
-    <a href="https://www.youtube.com/channel/UCm4_rUfjicRxAlcnkXoOWZQ">Youtube</a>
-    <div class="dropdown">
-        <button class="dropbtn">
-            Other Projects
-            <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-            <a href="https://sms-spam-ml.herokuapp.com/">SMS Spam Detector</a>
-        </div>
+    <div class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand mx-auto" href="/">Prediction Results</a>
     </div>
-</div>
-<h2><a href='/'> <p style="text-align: center;">Diabetes Prediction</p></a></h2>
-<h2>Results:</h2>
-{% if prediction == 1 %}
-    <h2 style="color:red;">Chances of having Diabetes is more, please consult a Doctor.</h2>
-    <p style="text-align: center;"><img src="https://img.collegedekhocdn.com/media/img/careers/doctor-clinic.jpg" alt="HTML" width="350" height="250"></p>
-{% elif prediction == 0 %}
-    <h2 style="color: blue;">No Worries!!! You don't have Diabetes.</h2>
-    <p style="text-align: center;"><img src="https://www.becomingminimalist.com/wp-content/uploads/2019/09/how-to-be-happy.jpg" alt="HTML" width="350" height="250"></p>
-{% endif %}
+    <div class="container">
+        <h2 class="text-center">Diabetes Prediction</h2>
+        <h2 class="text-center">Results</h2>
+        <div class="card">
+            {% if prediction == 1 %}
+            <p class="text-center">
+                <img src="https://img.freepik.com/free-vector/hospital-service-concept-flat-illustration_1150-50287.jpg"
+                     alt="HTML" class="img-fluid card-img-top">
+            </p>
+            <h2 class="text-danger text-center">
+                The risk of diabetes is elevated; it's advisable to seek medical advice :(. 
+            </h2>
+        </div>
+        <div class="card">
+            {% elif prediction == 0 %}
+            <p class="text-center">
+                <img src="https://img.freepik.com/free-vector/couple-avatar-characters-icons_24877-52944.jpg"
+                     alt="HTML" class="img-fluid card-img-top">
+            </p>
+            <h2 class="text-success text-center">
+                No need to worry! You do not have diabetes :).
+            </h2>
+        </div>
+        {% endif %}
+    </div>
 </body>
 </html>
