result.html fix

--- a/templates/result.html
+++ b/templates/result.html
@@ -18,7 +18,7 @@
             {% if prediction == 1 %}
             <p class="text-center">
                 <img src="https://img.freepik.com/free-vector/hospital-service-concept-flat-illustration_1150-50287.jpg"
-                     alt="HTML" class="img-fluid card-img-top">
+                     alt="HTML" class="img-fluid card-img-top" style="height: 500px; width: auto;">
             </p>
             <h2 class="text-danger text-center">
                 The risk of diabetes is elevated; it's advisable to seek medical advice :(. 
@@ -28,7 +28,7 @@
             {% elif prediction == 0 %}
             <p class="text-center">
                 <img src="https://img.freepik.com/free-vector/couple-avatar-characters-icons_24877-52944.jpg"
-                     alt="HTML" class="img-fluid card-img-top">
+                     alt="HTML" class="img-fluid card-img-top" style="height: 500px; width: auto;">
             </p>
             <h2 class="text-success text-center">
                 No need to worry! You do not have diabetes :).
